i can get and display task info from api, task overflow x bug solved

--- a/src/app/columns/columns.component.css
+++ b/src/app/columns/columns.component.css
@@ -15,6 +15,7 @@ div.coloana{
 	max-height: 96vh;
 
 	overflow-y: auto; 
+	word-wrap: break-word;
 }
 
 .tasks{
